--- a/public/partials/entidadobjeto.html
+++ b/public/partials/entidadobjeto.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-12">
 		<div style="clear:both" class="table-responsive">
 			<h3>Entidades objeto</h3>
-			<table class="table table-striped" ng-If="!!$root.permisoscalculados.superuser">
+			<table class="table table-striped table-hover" ng-If="!!$root.permisoscalculados.superuser">
 				<caption>
 					<div class="pull-right">
 						<input type="text" class="form-control" placeholder="Filtro..." ng-model="filtro" />
@@ -23,13 +23,18 @@
 					</tr>
 				</tfoot>
 				<tbody ng-repeat="entidadobjeto in entidades | filter:filtro">
-					<tr>
-						<th>{{entidadobjeto._id}}<br />{{entidadobjeto.denominacion}}<br />
+					<tr ng-class="{'danger': getCount(entidadobjeto._id) === 0 }">
+							<th>{{entidadobjeto._id}}<br />
+								{{entidadobjeto.denominacion}}
+								<br /><hr />
+								{{ jerarquias ['' + entidadobjeto.idjerarquia].nombrelargo }}
+								<hr />
 							<p class="text-center">
-								<a href="/carta/{{entidadobjeto.idjerarquia}}" class="btn btn-primary btn-xs" target="_blank">
+								<a href="/carta/{{entidadobjeto.idjerarquia}}" class="btn btn-default btn-xs" target="_blank">
 									<span class="fa fa-eye"></span>
 								</a>
-								<a href="{{entidadobjeto.url}}" class="btn btn-primary btn-xs" target="_blank">
+								<a class="btn btn-default btn-xs" target="_blank" href="/carta-printable/{{entidadobjeto.idjerarquia}}/{{entidadobjeto._id}}" title="Ver versi&oacute;n imprimible"><span class="glyphicon glyphicon-print"></span></a>
+								<a href="{{entidadobjeto.url}}" class="btn btn-default btn-xs" target="_blank">
 									<span class="fa fa-external-link"></span>
 								</a>
 								<span class="btn btn-primary btn-xs">
