--- a/public/partials/entidadobjeto.html
+++ b/public/partials/entidadobjeto.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-12">
 		<div style="clear:both" class="table-responsive">
 			<h3>Entidades objeto</h3>
-			<table class="table table-striped table-hover" ng-If="!!$root.permisoscalculados.superuser">
+			<table class="table table-striped table-hover" ng-If="$root.permisoscalculados.superuser">
 				<caption>
 					<div class="pull-right">
 						<input type="text" class="form-control" placeholder="Filtro..." ng-model="filtro" />
