--- a/public/partials/carta-informeanual.html
+++ b/public/partials/carta-informeanual.html
@@ -76,7 +76,7 @@
 									<span class="fa fa-pencil" ng-click="editar(accion)"></span>
 								</span>
 								<span class="btn btn-default">
-									<span class="fa fa-delete" ng-click="eliminar(accion)"></span>
+									<span class="fa fa-trash" ng-click="eliminar(accion)"></span>
 								</span>
 							</td>
 						</tr>
