--- a/public/partials/entidadobjeto.html
+++ b/public/partials/entidadobjeto.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-12">
 		<div style="clear:both" class="table-responsive">
 			<h3>Entidades objeto</h3>
-			<table class="table table-striped table-hover" ng-If="$root.permisoscalculados.superuser">
+			<table class="table table-striped table-hover hidden-print" ng-If="$root.permisoscalculados.superuser">
 				<caption>
 					<div class="pull-right">
 						<input type="text" class="form-control" placeholder="Filtro..." ng-model="filtro" />
@@ -57,6 +57,37 @@
 					</tr>
 				</tbody>
 			</table>
+			<div class="visible-print-block">
+				<table class="table table-striped table-condensed">
+					<tbody>
+						<tr ng-repeat-start="entidadobjeto in entidades | orderBy:'expediente' ">
+							<td class="text-center" style="white-space: nowrap;">{{entidadobjeto.expediente}}</td>
+							<td><strong>{{entidadobjeto.denominacion}}</strong></td>
+							<td>{{ getCount(entidadobjeto._id) }}</td>
+							<td>{{getFormulasStats(entidadobjeto._id) }}</td>
+							<td class="text-center"><i class="fa" ng-class="{'fa-check-square-o': getCount(entidadobjeto._id) > 0, 'fa-square-o': getCount(entidadobjeto._id) === 0}"></i></td>
+							<td class="text-center"><i class="fa" ng-class="{'fa-check-square-o': getFormulasStats(entidadobjeto._id) != '0/0', 'fa-square-o': getFormulasStats(entidadobjeto._id) === '0/0'}"></i></td>
+						</tr>
+						<tr ng-repeat-end>
+							<td class="text-center"><i class="fa fa-square-o fa-2"></i></td>
+							<td colspan="3">
+								<strong>{{entidadobjeto.idjerarquia}}</strong>: {{ jerarquias ['' + entidadobjeto.idjerarquia].nombrelargo }}
+							</td>
+							<td class="text-center"><i class="fa fa-square-o"></i></td>
+							<td class="text-center"><i class="fa fa-square-o"></i></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</div>
 </div>
+<!--
+<li>
+						[<strong>{{entidadobjeto.expediente}}</strong>] {{entidadobjeto.denominacion}} Objetivos: {{ getCount(entidadobjeto._id) }}. Fórmulas: {{getFormulasStats(entidadobjeto._id) }}
+						<br />
+						 <strong>{{entidadobjeto.idjerarquia}}</strong>: {{ jerarquias ['' + entidadobjeto.idjerarquia].nombrelargo }}
+						 <hr />
+					</li>
+
+					-->
